ui/css/dashboard.css
/* cssing dashboard */

/* widgets */
.widget-container {
	padding: 15px 0;
}
	.widget-row {

	}
		.widget {
			padding-top: 15px;
			padding-bottom: 15px;
		}
			.widget-inner {
				padding: 20px;
				min-height: 190px;
				overflow: hidden;
				background-color: rgba(0,0,0,.2);
				color: #fff;
			}
				.widget-top-bar {
					padding-bottom: 10px;
					margin-bottom: 10px;
					border-bottom: 1px solid rgba(255,255,255,.1);
					position: relative;
					padding-right: 20px;
				}
					.widget-top-bar-title {
						display: block;
						margin: 0;
					}
						.widget-top-bar-title>* {
							font: inherit;
							line-height: inherit;
							vertical-align: inherit;
						}
					.widget-top-bar>.widget-led-status {
						position: absolute;
						width: 12px;
						height: 12px;
						top: 8px;
						right: 3px;
						border: 1px solid rgba(255,255,255,.4);
						box-shadow: 0 0 10px rgba(0,0,0,0.2);
						transition: all ease 1s;
						-webkit-transition: all ease 1s;
						-moz-transition: all ease 1s;
						-o-transition: all ease 1s;
					}
					.widget-led-status[data-led="good"] { background-color: #0eb629; }
					.widget-led-status[data-led="check"] { background-color: #cdb100; }
					.widget-led-status[data-led="bad"] { background-color: #cb002b; }
					.widget-led-status[data-led="loading"] {
						animation: status-led-loading-animation .4s;
						-webkit-animation: status-led-loading-animation .4s;
						-moz-animation: status-led-loading-animation .4s;
						-o-animation: status-led-loading-animation .4s;
						animation-iteration-count: infinite;
						-webkit-animation-iteration-count: infinite;
						-moz-animation-iteration-count: infinite;
						-o-animation-iteration-count: infinite;
					}
						@keyframes status-led-loading-animation {
							0%   { background-color: rgba(255,255,255,.1); }
							50%  { background-color: rgba(255,255,255,.5); }
							100% { background-color: rgba(255,255,255,.1); }
						}
						@-webkit-keyframes status-led-loading-animation {
							0%   { background-color: rgba(255,255,255,.1); }
							50%  { background-color: rgba(255,255,255,.5); }
							100% { background-color: rgba(255,255,255,.1); }
						}
						@-moz-keyframes status-led-loading-animation {
							0%   { background-color: rgba(255,255,255,.1); }
							50%  { background-color: rgba(255,255,255,.5); }
							100% { background-color: rgba(255,255,255,.1); }
						}
						@-o-keyframes status-led-loading-animation {
							0%   { background-color: rgba(255,255,255,.1); }
							50%  { background-color: rgba(255,255,255,.5); }
							100% { background-color: rgba(255,255,255,.1); }
						}
				.widget-list-elements {
					list-style: none;
					margin: 0;
					padding: 0;
				}
					.widget-list-elements>li {
						display: block;
						text-transform: uppercase;
					}
						.widget-list-elements>li>span {
							text-transform: inherit;
							font: inherit;
							display: inline-block;
						}
						.widget-list-element {
							width: 60%;
							color: rgba(255,255,255,0.8);
						}
						.widget-list-value {
							width: 39%;
							text-align: right;
							font-style: italic !important;
							color: #24acce;
						}

				.widget-progress-bar-box {
					position: relative;
					padding: 15px 0;
					margin-bottom: 15px;
				}
					.widget-progress-bar {
						position: relative;
						border: 1px solid rgba(255,255,255,.1);
						width: 100%;
						height: 12px;
						margin: 0 auto;
						padding-bottom: 15px;
					}
						.widget-progress-bar>.fill {
							position: absolute;
							top: 0;
							left: 0;
							width: 0;
							height: 100%;
							transition: all ease .3s;
							-webkit-transition: all ease .3s;
							-moz-transition: all ease .3s;
							-o-transition: all ease .3s;
						}
							.widget-progress-bar>.fill>.real-fill {
								position: absolute;
								top: 1px;
								left: 1px;
								width: calc(100% - 2px);
								height: calc(100% - 2px);
								background-color: #24acce;
							}
							.widget-progress-bar .percent-witness {
								font-size: 10px;
								line-height: 10px;
								height: 10px;
								display: block;
								color: rgba(255,255,255,.5);
								position: absolute;
								top: 100%;
								right: 0;
								margin-top: 5px;
								width: 40px;
								margin-right: -20px;
								text-align: center;
							}
								.widget-progress-bar .percent-witness>span {
									font: inherit;
									line-height: inherit;
									display: inline-block;
								}
				.widget-system-status {
					text-align: center;
					font-weight: 100;
					text-transform: uppercase;
					margin-bottom: 0;
				}
					.widget-system-status>.icon {
						display: inline-block;
						vertical-align: middle;
						width: 24px;
						height: 24px;
						line-height: 22px;
						text-align: center;
						border-radius: 50%;
						border: 1px solid #fff;
						margin-right: 5px;
					}





/* dashboard notification box */
#dashboard-notification-box {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	height: auto;
}
	#dashboard-notification-box .dashboard-notification {
		padding: 15px;
		color: #fff;
		width: 80%;
		min-width: 460px;
		margin: 15px auto;
		position: relative;
		padding-left: 60px;
	}
	#dashboard-notification-box .dashboard-notification.error { background-color: #cb002b; }
	#dashboard-notification-box .dashboard-notification.warning { background-color: #cdb100; }
	#dashboard-notification-box .dashboard-notification.notification { background-color: #0eb629; }
	#dashboard-notification-box .icon-box {
		display: block;
		line-height: 30px;
		width: 30px;
		height: 30px;
		text-align: center;
		border: 1px solid #fff;
		border-radius: 50%;
		position: absolute;
		top: 50%;
		left: 30px;
		margin-top: -15px;
		margin-left: -15px;
	}
	#dashboard-notification-box .dashboard-notification .ic {
		display: none;
		position: relative;
		top: -1px;
	}
	#dashboard-notification-box .dashboard-notification.error .ic-cross {display: block !important;position: relative;top: -1px;}
	#dashboard-notification-box .dashboard-notification.warning .ic-warning {display: block !important;top: -2px;}
	#dashboard-notification-box .dashboard-notification.notification .ic-checkmark {display: block !important;font-size: 17px;}
	#dashboard-notification-box .notification-text {
		display: inline-block;
		vertical-align: middle;
		line-height: 24px;
	}

